--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
     <title>Kirk Russell - Portfolio</title>
-    <base href="https://github.com/kirkrussell2/my-portfolio/tree/gh-pages">
+    <base href="https://kirkrussell2.github.io/my-portfolio/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
