--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -13,19 +13,12 @@
   <link rel="stylesheet" href="assets/VenoBox-master/venobox/venobox.min.css" />
   <script src="assets/VenoBox-master/venobox/venobox.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <style>
-    html {
-      scroll-behavior: smooth
-    }
-  </style>
-  <link rel="stylesheet" href="styles.8871cde433201907.css" media="print" onload="this.media='all'">
-  <noscript><link rel="stylesheet" href="styles.8871cde433201907.css"></noscript>
+  <link rel="stylesheet" href="styles.44816534b95cf0beca0c.css">
 </head>
 <body>
   <app-root></app-root>
-  <script src="runtime.da6b4da3f8b2af72.js" type="module"></script>
-  <script src="polyfills.f69115ef4e5a481d.js" type="module"></script>
-  <script src="main.77e99afd55f8b066.js" type="module"></script>
+  <script src="runtime.359d5ee4682f20e936e9.js" defer></script>
+  <script src="polyfills.bf99d438b005d57b2b31.js" defer></script>
+  <script src="main.c57f498709111933d43f.js" defer></script>
 </body>
-</head>
 </html>
